2012-10-16  DP  <occitan@esperanto.org>

	* Mpp/Repository.pm (get): Do not propagate random $@.

2012-10-14  DP  <occitan@esperanto.org>

snapshot 2.0.98.1

	* Mpp/Repository.pm: Cope with rule producing symlink in repository.

	* Mpp/FileOpt.pm (signature): Dangling symlinks also produce a signature, since they are legal (albeit funny) files.

	* Mpp/Scanner.pm
	* Mpp/Rule.pm: Optimize small functions.

	* Mpp/Text.pm
	* VERSION: n.m.98.i are snapshots, and n.m.99.i a release candidate.

2012-08-30  DP  <occitan@esperanto.org>

	* t/*: Use our built in commands for tests.

	* Mpp/Cmds.pm (c_touch): utime not working as documented in 5.8.0.

	* makepp: Simplify Win workaround.

2012-07-05  Mike Frysinger  <vapier@gentoo.org>

	* install.pl: Fix DESTDIR.

2012-06-09  pfeiffer  <occitan@esperanto.org>

	* *: Eliminate need for HP/UX hack, which was slightly buggy.

	* Mpp/File.pm
	* Mpp/Subs.pm: Make stat_exe_separate a constant.

	* Mpp/Makefile.pm: Use possibilities of PerlIO.

2012-05-29  pfeiffer  <occitan@esperanto.org>

	* makeppinfo (--unremembered): New option.

	* Mpp/Makefile.pm (read_makefile): Run toplevel &cmds in correct dir.

	* *: Remove more 5.6-isms.

	* VERSION: i.j.9beta is development for i.j+1.

2012-05-23  pfeiffer  <occitan@esperanto.org>

	* Mpp/Text.pm
	* makepp*
	* Mpp/BuildCacheControl.pm
	* install.pl: Make sure help option is consistent with pod, and reflects if man and/or html is installed.

	* Mpp.pm: Fallback to --verbose if log file not writable.

2012-05-15  pfeiffer  <occitan@esperanto.org>

	* *: use v5.8 and eliminate many v5.6-isms

2012-05-12  pfeiffer  <occitan@esperanto.org>

	* Mpp/Makefile.pm
	* makepp: This "x:y;a=1 cmd"' is not a target specific assignment.
	Accept -f -, both for gmake test suite. (Thanks to Ben S.)

	* makeppreplay (--sed): New option.

	* Mpp/FileOpt.pm: Store build info for mppr, even on initial fail.

	* Mpp/Rule.pm: Use valid attribute.

2012-03-25  pfeiffer  <occitan@esperanto.org>
