@@ -1,5 +1,5 @@
 ###	SPAR <http://www.cpan.org/scripts/>
-###	31	644	1067451874	1350671361	makepp_test_script.pl
+###	26	644	1067451874	1350842084	makepp_test_script.pl
 #
 # Test various kinds of fake signatures that we generate using the
 # --assume-new, --assume-old, and -n option.
@@ -8,12 +8,7 @@
 sub doit {
   my( $sf, $opt, $bl, $af, $nowait ) = @_;
   c_echo $sf, '-osourcefile' if $sf;
-  # Don't use c_grep, as this perl and the subperl seem to share some resources
-  # leading to mysterious race conditions, especially under high machine load:
-  open my $mkp, "$ENV{PERL} $makepp_path $opt|" or die "could not exec makepp\n";
-  open my $log, ">build_log_$bl" or die "could not create build_log$bl\n";
-  /^&(?:cat|echo|sed)/ and print $log $_ while <$mkp>;
-  close $mkp;
+  c_grep '/^&(?:cat|sed)/', "-i$ENV{PERL} $makepp_path -r $opt|", "-obuild_log_$bl";
   c_cp allfiles => "allfiles_$bl" if $af;
   wait_timestamp 'allfiles' if !$nowait;
 }
