@@ -1,4 +1,6 @@
-2012-10-16  DP  <occitan@esperanto.org>
+2012-10-21  DP  <occitan@esperanto.org>
+
+	* Mpp/Cmds.pm (frame): Always wait for inpipe to finish.
 
 	* Mpp/Repository.pm (get): Do not propagate random $@.
 
